# SR2_GC

./: CMakeLists.txt  README.md  build.sh  color.h  configure.sh  fragment.h  main.cpp  print.h  run.sh  shaders.h  triangle.h  uniform.h  x.mtl
